backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-backend-service
spec:
  selector:
    app: java-backend
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080
  type: ClusterIP
